Mejora de branding

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "complaints-book-server-pro",
+  "name": "complaints-book-server",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
