--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ ALLOWED_ORIGINS=https://tu-app.com,https://otro-origen  # Orígenes permitidos p
 LOG_LEVEL=info              # trace|debug|info|warn|error
 LOG_PRETTY=true             # Pretty print en desarrollo
 LOG_TO_FILE=false           # true para escribir logs en logs/app.log
+FORCE_DB_SYNC=false         # true para sincronizar la base de datos en cada inicio (desarrollo)
 
 # --- Base de datos (MySQL) ---
 DB_HOST=localhost
@@ -25,7 +26,6 @@ EMAIL_PORT=465
 EMAIL_SECURE=true           # true para SSL (465), false para STARTTLS (587)
 EMAIL_USER=notificaciones@tu-dominio.com
 EMAIL_PASSWORD=tu_password_smtp
-SUPPORT_EMAIL=soporte@tu-dominio.com
 
 # --- Semillas (admin inicial) ---
 ADMIN_EMAIL=admin@tu-dominio.com
@@ -33,3 +33,15 @@ ADMIN_PASSWORD=cambia_esto
 
 # --- Seguridad ---
 JWT_SECRET=pon_un_secreto_fuerte_aqui
+
+# --- Tenant por defecto (branding fallback) ---
+# Valores usados si el tenant 'default' no existe aún. Pueden apuntar a assets locales.
+DEFAULT_TENANT_COMPANY_BRAND=ACME Corp
+DEFAULT_TENANT_COMPANY_NAME=ACME Corporation S.A.
+DEFAULT_TENANT_COMPANY_RUC=98765432109
+DEFAULT_TENANT_PRIMARY_COLOR=#1a1a1a
+DEFAULT_TENANT_ACCENT_COLOR=#3a3a3a
+DEFAULT_TENANT_LOGO_LIGHT_PATH=assets/default-tenant/logo-light.png
+DEFAULT_TENANT_LOGO_DARK_PATH=assets/default-tenant/logo-dark.png
+DEFAULT_TENANT_FAVICON_PATH=assets/default-tenant/favicon.png
+DEFAULT_TENANT_NOTIFICATIONS_EMAIL=soporte@example.com
