--- a/.env.example
+++ b/.env.example
@@ -13,9 +13,9 @@ FORCE_DB_SYNC=false         # true para sincronizar la base de datos en cada ini
 
 # --- Base de datos (MySQL) ---
 DB_HOST=localhost
-DB_NAME=complaints_book
-DB_USER=cb_user
-DB_PASSWORD=tu_password_seguro
+DB_NAME=reclamofacil_db
+DB_USER=rf_user
+DB_PASSWORD=rf_password
 
 # --- Redis ---
 REDIS_URL=redis://localhost:6379
@@ -36,12 +36,12 @@ JWT_SECRET=pon_un_secreto_fuerte_aqui
 
 # --- Tenant por defecto (branding fallback) ---
 # Valores usados si el tenant 'default' no existe aún. Pueden apuntar a assets locales.
-DEFAULT_TENANT_COMPANY_BRAND=ACME Corp
-DEFAULT_TENANT_COMPANY_NAME=ACME Corporation S.A.
-DEFAULT_TENANT_COMPANY_RUC=98765432109
-DEFAULT_TENANT_PRIMARY_COLOR=#1a1a1a
-DEFAULT_TENANT_ACCENT_COLOR=#3a3a3a
+DEFAULT_TENANT_COMPANY_BRAND=ReclamoFácil
+DEFAULT_TENANT_COMPANY_NAME=ReclamoFácil S.A.C.
+DEFAULT_TENANT_COMPANY_RUC=20605432109
+DEFAULT_TENANT_PRIMARY_COLOR=#2563EB
+DEFAULT_TENANT_ACCENT_COLOR=#16A34A
 DEFAULT_TENANT_LOGO_LIGHT_PATH=assets/default-tenant/logo-light.png
 DEFAULT_TENANT_LOGO_DARK_PATH=assets/default-tenant/logo-dark.png
 DEFAULT_TENANT_FAVICON_PATH=assets/default-tenant/favicon.png
-DEFAULT_TENANT_NOTIFICATIONS_EMAIL=soporte@example.com
+DEFAULT_TENANT_NOTIFICATIONS_EMAIL=soporte@reclamofacil.com
