README.md actualizado

--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,8 @@ DB_USER=rf_user
 DB_PASSWORD=rf_password
 
 # --- Redis ---
-REDIS_URL=redis://localhost:6379
+REDIS_URL=redis://localhost:6379    # Conexión básica sin autenticación
+REDIS_URL=redis://:mypassword@redis.remotehost.com:6379  # Con autenticación
 
 # --- Email (SMTP) ---
 EMAIL_HOST=smtp.tu-dominio.com
