Update module: Superadmin User

--- a/.env.example
+++ b/.env.example
@@ -28,7 +28,10 @@ EMAIL_SECURE=true           # true para SSL (465), false para STARTTLS (587)
 EMAIL_USER=notificaciones@tu-dominio.com
 EMAIL_PASSWORD=tu_password_smtp
 
-# --- Semillas (admin inicial) ---
+# --- Semillas (usuarios iniciales) ---
+CREATE_SUPERADMIN_ON_SEED=true  # true para crear superadmin al ejecutar seed.js
+SUPERADMIN_EMAIL=superadmin@ejemplo.com
+SUPERADMIN_PASSWORD=cambia_esto
 ADMIN_EMAIL=admin@tu-dominio.com
 ADMIN_PASSWORD=cambia_esto
 
@@ -37,8 +40,8 @@ JWT_SECRET=pon_un_secreto_fuerte_aqui
 
 # --- Tenant por defecto (branding fallback) ---
 # Valores usados si el tenant 'default' no existe aún. Pueden apuntar a assets locales.
-DEFAULT_TENANT_COMPANY_BRAND=ReclamoFácil
-DEFAULT_TENANT_COMPANY_NAME=ReclamoFácil S.A.C.
+DEFAULT_TENANT_COMPANY_BRAND=TuEmpresa
+DEFAULT_TENANT_COMPANY_NAME=TuEmpresa S.A.C.
 DEFAULT_TENANT_COMPANY_RUC=20605432109
 DEFAULT_TENANT_PRIMARY_COLOR=#2563EB
 DEFAULT_TENANT_ACCENT_COLOR=#16A34A
