Mejora de planes

--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,6 @@ DEFAULT_TENANT_LOGO_LIGHT_PATH=assets/default-tenant/logo-light.png
 DEFAULT_TENANT_LOGO_DARK_PATH=assets/default-tenant/logo-dark.png
 DEFAULT_TENANT_FAVICON_PATH=assets/default-tenant/favicon.png
 DEFAULT_TENANT_NOTIFICATIONS_EMAIL=soporte@reclamofacil.com
+
+# --- Plan por defecto al ejecutar seed.js ---
+DEFAULT_TENANT_PLAN_ON_SEED=starter  # Plan asignado al tenant 'default' al ejecutar seed.js (free | starter | pro | enterprise)
